--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-    <script src="PallineRimbalzanti.js"></script>
+    <script src="CampoMinato.js"></script>
 </head>
 
 <body>
